# desktop-agent

./: .git-readme.md  .gitignore  ANALYSIS.md  CHANGELOG_SMART_PRIMITIVES.md  COMPLETE_HANDOFF.md  HANDOFF.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  MODULAR_MIGRATION.md  PHASE1_COMPLETE_TEST.md  QUICKSTART.md  README.md  RESUME_HERE.md  SESSION_SUMMARY.md  SKILL.md  SMALL_MODEL_ANALYSIS.md  SMALL_MODEL_IMPROVEMENTS.md  SMART_PRIMITIVES.md  SMART_PRIMITIVES_SUMMARY.md  TASK_REPOSITORY_ROADMAP.md  TEST_SMART_PRIMITIVES.sh  add-tool-references.sh  analyze-reddit-feed.py  browse-and-analyze-reddit.sh  desktop-agent-original.py  desktop-agent.py  desktop-agent.py.original  extract-micro-tasks.py  install.sh  pyproject.toml  record-foundational-tasks.sh
modular/: atspi.py  cli.py  config.py  input.py  media.py  ocr.py  shortcuts.py  snapshot.py  task_system.py  window.py
